--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+body{
+  margin: 0;
+}
 div{
-    margin-top: 20px;
-    margin-bottom: 20px;
+
     padding: 20px 20px 20px 20px;
     border: 1px solid;
-    background-color: antiquewhite;
+    background-color: rgb(178, 218, 240);
+    margin: 20px ;
 }
 button{
     width: 100px;
@@ -23,4 +26,7 @@ ul {
     display: block;
     padding: 8px;
     background-color: #dddddd;
+  }
+  p{
+    color: rgb(226, 43, 43);
   }
